--- a/css/gallery-styles.css
+++ b/css/gallery-styles.css
@@ -456,3 +456,16 @@
     letter-spacing: 1px;
     box-shadow: none;
 }
+.donate-button {
+    background-color: #87CEEB;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 25px;
+}
