--- a/css/style.css
+++ b/css/style.css
@@ -997,8 +997,128 @@
 }
 
 /*** clubs Service End ***/
+.clubs-service .clubs-service-item {
+    box-shadow: 0 0 45px rgba(0, 0, 0, .2) ;
+}
+
+.clubs-service .clubs-service-item .clubs-service-img {
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.clubs-service .clubs-service-item .clubs-service-img img {
+    transition: 0.5s;
+}
+
+.clubs-service .clubs-service-item .clubs-service-img::before {
+    width: 100%;
+    height: 0;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    transition: 0.5s;
+    z-index: 5;
+    
+}
+
+.clubs-service .clubs-service-item:hover .clubs-service-img::before {
+    height: 100%;
+    background: rgba(21, 185, 217, .3);
+}
+
+.clubs-service .clubs-service-item .clubs-service-img:hover img {
+    transform: scale(1.3);
+}
+
+.clubs-service .clubs-service-item .clubs-service-content {
+    position: relative;
+    z-index: 2;
+
+}
+
+.clubs-service .clubs-service-item .clubs-service-content::before {
+    width: 100%;
+    height: 8px;
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background: rgba(21, 185, 217, .5);
+    transition: 0.5s;
+    z-index: 3;
+}
+
+.clubs-service .clubs-service-item:hover .clubs-service-content::before {
+    background: var(--bs-primary);
+    height: 100%;
+}
+
+.clubs-service .clubs-service-item .clubs-service-content .clubs-service-content-inner {
+    transition: 0.5s;
+}
 
 
+.clubs-service .clubs-service-item:hover .clubs-service-content .clubs-service-content-inner {
+    position: relative;
+    color: var(--bs-white) !important;
+    z-index: 9;
+}
+.clubs-service .clubs-service-item:hover .clubs-service-content .clubs-service-content-inner h5 {
+    color: var(--bs-secondary);
+}
+
+.feature .feature-item {
+    position: relative;
+    display: flex;
+    border: 1px solid var(--bs-primary);
+    border-radius: 10px;
+    background: var(--bs-light);
+    transition: 0.5s;
+
+}
+
+.feature .feature-item::before {
+    width: 0;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+.feature .feature-item:hover::before {
+    width: 100%;
+    background: var(--bs-primary);
+}
+
+.feature .feature-item .feature-icon {
+    display: inline-flex;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+.feature .feature-item:hover .feature-icon {
+    position: relative;
+    z-index: 2;
+}
+
+.feature .feature-item:hover .feature-content {
+    position: relative;
+    color: var(--bs-white);
+    z-index: 2;
+}
+
+.feature .feature-item:hover .feature-content h5 {
+    color: var(--bs-dark);
+}
 
 /************************ Clubs End ******************************************************/
 
